{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 6,
  "lineage": "4d763d63-6848-52d5-a2ff-6e82138d8f08",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-08-28T08:41:34.340-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/poc-sed-shared-jetstream-sb/global/firewalls/myvpc-firewall",
            "log_config": [],
            "name": "myvpc-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/global/networks/myvpc",
            "priority": 1000,
            "project": "poc-sed-shared-jetstream-sb",
            "self_link": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/global/firewalls/myvpc-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "depends_on": [
            "module.network"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/poc-sed-shared-jetstream-sb/global/networks/myvpc",
            "name": "myvpc",
            "project": "poc-sed-shared-jetstream-sb",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/global/networks/myvpc"
          }
        }
      ]
    },
    {
      "module": "module.network.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "each": "map",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.network_routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "each": "map",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": "egress-internet",
          "schema_version": 0,
          "attributes": {
            "description": "route through IGW to access internet",
            "dest_range": "0.0.0.0/0",
            "id": "projects/poc-sed-shared-jetstream-sb/global/routes/egress-internet",
            "name": "egress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/global/networks/myvpc",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "poc-sed-shared-jetstream-sb",
            "self_link": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/global/routes/egress-internet",
            "tags": [
              "egress-inet"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.network.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "each": "map",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": "us-central1/subnet-01",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-08-28T08:41:34.485-07:00",
            "gateway_address": "10.10.10.1",
            "id": "projects/poc-sed-shared-jetstream-sb/regions/us-central1/subnetworks/subnet-01",
            "ip_cidr_range": "10.10.10.0/24",
            "name": "subnet-01",
            "network": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/global/networks/myvpc",
            "private_ip_google_access": false,
            "project": "poc-sed-shared-jetstream-sb",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/regions/us-central1/subnetworks/subnet-01"
          }
        },
        {
          "index_key": "us-central1/subnet-02",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-08-28T08:41:34.463-07:00",
            "gateway_address": "10.10.20.1",
            "id": "projects/poc-sed-shared-jetstream-sb/regions/us-central1/subnetworks/subnet-02",
            "ip_cidr_range": "10.10.20.0/24",
            "name": "subnet-02",
            "network": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/global/networks/myvpc",
            "private_ip_google_access": false,
            "project": "poc-sed-shared-jetstream-sb",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/poc-sed-shared-jetstream-sb/regions/us-central1/subnetworks/subnet-02"
          }
        }
      ]
    }
  ]
}